# exome-sequencing

./: .gitignore  README.md  config.toml  main.py  pyproject.toml  run_setup.py  run_task.py  testing.py
docker/: app-config.json  container_pull_manifest.json
scripts/: deploy_omics.py  run_workflow.py
workflows/: a.py
workflows/annotate_vcfs/: cli-input.yaml  main.wdl  parameters-template.json  test.parameters.json
workflows/demo_workflow/: cli-input.yaml  main.wdl  parameter-template.json  test.parameters.json
workflows/filter_vcfs/: cli-input.yaml  main.wdl  parameter-template.json  test.parameters.json
workflows/quick_bam_to_vcf/: cli-input.yaml  main.wdl  test.parameters.json
workflows/snp_vcfs/: cli-input.yaml  main.wdl  parameters-template.json  test.parameters.json
workflows/to_bam/: cli-input.yaml  main.wdl  processing-for-variant-discovery-gatk4.wdl  test.parameters.json
workflows/to_bam_mouse/: README.md  fastq-to-ubam.wdl  main.wdl  processing-for-variant-discovery-gatk4.wdl  test.parameters.json
workflows/to_bam_to_vcf_mouse/: cli-input.yaml  main.wdl  parameter-template.json  processing-for-variant-discovery-gatk4.wdl  test.parameters.json  ubam-to-vcf.wdl
workflows/to_bam_to_vcf_mouse/inputs/: 100mer.parameters.json  95m1.parameters.json  95m2.parameters.json  MOCA.parameters.json  MOCB.parameters.json  MOCC.parameters.json
workflows/to_vcf/: haplotypecaller-gvcf-gatk4.wdl  parameter-template.json  test.parameters.json
