[project]
name = "exome-sequencing"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Osman", email = "72527925+rosman83@users.noreply.github.com"},
]
dependencies = [
    "boto3>=1.34.109",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
